--- a/merge.ipynb
+++ b/merge.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "state='TX'\n",
+    "state='WA'\n",
     "list=['new','fresh%20paint','quartz','remodeled','renovated','shiplap','soft%20close','staging','stainless','turn%20key','updated']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=df.reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=df.drop([\"index\"],axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
